# handler/api/docs/swagger.yaml
@@ -52,12 +52,241 @@ definitions:
       symbol:
         type: string
     type: object
+  api.Collateral:
+    properties:
+      art:
+        type: string
+      beg:
+        type: string
+      chop:
+        type: string
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      dai:
+        type: string
+      debt:
+        type: string
+      dunk:
+        type: string
+      dust:
+        type: string
+      duty:
+        type: string
+      gem:
+        type: string
+      id:
+        type: string
+      ink:
+        type: string
+      line:
+        type: string
+      live:
+        type: boolean
+      mat:
+        type: string
+      name:
+        type: string
+      price:
+        type: string
+      rate:
+        type: string
+      rho:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      tau:
+        type: integer
+      ttl:
+        type: integer
+    type: object
+  api.Flip:
+    properties:
+      Guy:
+        type: string
+      action:
+        type: integer
+      art:
+        type: string
+      bid:
+        type: string
+      collateral_id:
+        type: string
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      end:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      id:
+        type: string
+      lot:
+        type: string
+      tab:
+        type: string
+      tic:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      vault_id:
+        type: string
+    type: object
+  api.Flip_Event:
+    properties:
+      action:
+        type: integer
+      bid:
+        type: string
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      flip_id:
+        type: string
+      lot:
+        type: string
+    type: object
+  api.Oracle:
+    properties:
+      asset_id:
+        type: string
+      current:
+        type: string
+      hop:
+        type: integer
+      next:
+        type: string
+      peek_at:
+        description: |-
+          @inject_tag: swaggertype:"string" format:"date"
+          last update of current price
+        format: date
+        type: string
+    type: object
+  api.Pagination:
+    properties:
+      has_next:
+        type: boolean
+      next_cursor:
+        type: string
+    type: object
   api.Resp_ListAssets:
     properties:
       assets:
         items:
           $ref: '#/definitions/api.Asset'
         type: array
+    type: object
+  api.Resp_ListCollaterals:
+    properties:
+      collaterals:
+        items:
+          $ref: '#/definitions/api.Collateral'
+        type: array
+    type: object
+  api.Resp_ListFlipEvents:
+    properties:
+      events:
+        items:
+          $ref: '#/definitions/api.Flip_Event'
+        type: array
+    type: object
+  api.Resp_ListFlips:
+    properties:
+      flips:
+        items:
+          $ref: '#/definitions/api.Flip'
+        type: array
+      pagination:
+        $ref: '#/definitions/api.Pagination'
+    type: object
+  api.Resp_ListOracles:
+    properties:
+      oracles:
+        items:
+          $ref: '#/definitions/api.Oracle'
+        type: array
+    type: object
+  api.Resp_ListTransactions:
+    properties:
+      pagination:
+        $ref: '#/definitions/api.Pagination'
+      transactions:
+        items:
+          $ref: '#/definitions/api.Transaction'
+        type: array
+    type: object
+  api.Resp_ListVaultEvents:
+    properties:
+      events:
+        items:
+          $ref: '#/definitions/api.Vault_Event'
+        type: array
+    type: object
+  api.Resp_ListVaults:
+    properties:
+      pagination:
+        $ref: '#/definitions/api.Pagination'
+      vaults:
+        items:
+          $ref: '#/definitions/api.Vault'
+        type: array
+    type: object
+  api.Transaction:
+    properties:
+      action:
+        type: integer
+      amount:
+        type: string
+      asset_id:
+        type: string
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      id:
+        type: string
+      msg:
+        type: string
+      parameters:
+        type: string
+      status:
+        type: integer
+    type: object
+  api.Vault:
+    properties:
+      art:
+        type: string
+      collateral_id:
+        type: string
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      id:
+        type: string
+      ink:
+        type: string
+    type: object
+  api.Vault_Event:
+    properties:
+      action:
+        type: integer
+      created_at:
+        description: '@inject_tag: swaggertype:"string" format:"date"'
+        format: date
+        type: string
+      dart:
+        type: string
+      debt:
+        type: string
+      dink:
+        type: string
+      vault_id:
+        type: string
     type: object
   system.InfoResponse:
     properties:
@@ -108,13 +337,6 @@ definitions:
         description: mixin oauth token
         type: string
     type: object
-  views.Error:
-    properties:
-      code:
-        type: integer
-      msg:
-        type: string
-    type: object
 host: pando-test-api.fox.one
 info:
   contact:
@@ -146,10 +368,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/actions.CreateResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/views.Error'
       summary: request payment code
       tags:
       - actions
@@ -164,13 +382,124 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/api.Resp_ListAssets'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/views.Error'
       summary: list assets
       tags:
-      - assets
+      - Assets
+  /assets/{asset_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: mixin asset id
+        in: path
+        name: asset_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Asset'
+      summary: Find Asset By ID
+      tags:
+      - Assets
+  /cats:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListCollaterals'
+      summary: list all collateral
+      tags:
+      - Collaterals
+  /cats/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: collateral id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Collateral'
+      summary: find collateral by id
+      tags:
+      - Collaterals
+  /flips:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: cursor
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListFlips'
+      summary: list flips
+      tags:
+      - Flips
+  /flips/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: flip id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Flip'
+      summary: find flip by id
+      tags:
+      - Flips
+  /flips/{id}/events:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: flip id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListFlipEvents'
+      summary: list flip events
+      tags:
+      - Flips
   /info:
     get:
       consumes:
@@ -182,10 +511,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/system.InfoResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/views.Error'
       summary: Show system info
       tags:
       - system
@@ -206,13 +531,69 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/user.LoginResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/views.Error'
       summary: login with mixin oauth code
       tags:
       - user
+  /me/vats:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: cursor
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - description: 'Example: Bearer foo'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListVaults'
+      summary: list my vaults
+      tags:
+      - Vaults
+  /oracles:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListOracles'
+      summary: list all oracles
+      tags:
+      - Oracles
+  /oracles/{asset_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: mixin asset id
+        in: path
+        name: asset_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Oracle'
+      summary: find oracle by asset id
+      tags:
+      - Oracles
   /time:
     get:
       consumes:
@@ -224,13 +605,121 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/system.TimeResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/views.Error'
       summary: Show server time
       tags:
       - system
+  /transactions:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: cursor
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListTransactions'
+      summary: list transactions
+      tags:
+      - Transactions
+  /transactions/{follow_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 'Example: Bearer foo'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: follow id
+        in: path
+        name: follow_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Transaction'
+      summary: find tx by follow id
+      tags:
+      - Transactions
+  /vats:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: collateral_id
+        type: string
+      - in: query
+        name: cursor
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: user_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListVaults'
+      summary: list vaults
+      tags:
+      - Vaults
+  /vats/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: vault id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Vault'
+      summary: find vault by id
+      tags:
+      - Vaults
+  /vats/{id}/events:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: '@inject_tag: valid:"uuid,required"'
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Resp_ListVaultEvents'
+      summary: list vault events
+      tags:
+      - Vaults
 schemes:
 - https
 swagger: "2.0"
