# handler/rpc/server.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"sort"
 
+	"github.com/asaskevich/govalidator"
 	"github.com/fox-one/pando/core"
 	"github.com/fox-one/pando/handler/auth"
 	"github.com/fox-one/pando/handler/request"
@@ -46,6 +47,15 @@ type Server struct {
 func (s *Server) TwirpServer() api.TwirpServer {
 	opts := []interface{}{
 		twirp.WithServerJSONSkipDefaults(false),
+		twirp.WithServerInterceptors(func(next twirp.Method) twirp.Method {
+			return func(ctx context.Context, req interface{}) (interface{}, error) {
+				if _, err := govalidator.ValidateStruct(req); err != nil {
+					return nil, twirp.InvalidArgumentError("", err.Error())
+				}
+
+				return next(ctx, req)
+			}
+		}),
 	}
 
 	return api.NewPandoServer(s, opts...)
@@ -55,6 +65,15 @@ func (s *Server) Handle(sessions core.Session) http.Handler {
 	return auth.HandleAuthentication(sessions)(s.TwirpServer())
 }
 
+// FindAsset godoc
+// @Summary Find Asset By ID
+// @Description
+// @Tags Assets
+// @Accept  json
+// @Produce  json
+// @param asset_id path string true "mixin asset id"
+// @Success 200 {object} api.Asset
+// @Router /assets/{asset_id} [get]
 func (s *Server) FindAsset(ctx context.Context, req *api.Req_FindAsset) (*api.Asset, error) {
 	asset, err := s.assets.Find(ctx, req.Id)
 	if err != nil {
@@ -78,6 +97,14 @@ func (s *Server) FindAsset(ctx context.Context, req *api.Req_FindAsset) (*api.As
 	return views.Asset(asset, chain), nil
 }
 
+// ListAssets godoc
+// @Summary list assets
+// @Description
+// @Tags Assets
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} api.Resp_ListAssets
+// @Router /assets [get]
 func (s *Server) ListAssets(ctx context.Context, _ *api.Req_ListAssets) (*api.Resp_ListAssets, error) {
 	assets, err := s.assets.List(ctx)
 	if err != nil {
@@ -104,6 +131,15 @@ func (s *Server) ListAssets(ctx context.Context, _ *api.Req_ListAssets) (*api.Re
 	return resp, nil
 }
 
+// FindOracle godoc
+// @Summary find oracle by asset id
+// @Description
+// @Tags Oracles
+// @Accept  json
+// @Produce  json
+// @param asset_id path string true "mixin asset id"
+// @Success 200 {object} api.Oracle
+// @Router /oracles/{asset_id} [get]
 func (s *Server) FindOracle(ctx context.Context, req *api.Req_FindOracle) (*api.Oracle, error) {
 	oracle, err := s.oracles.Find(ctx, req.Id)
 	if err != nil {
@@ -118,6 +154,14 @@ func (s *Server) FindOracle(ctx context.Context, req *api.Req_FindOracle) (*api.
 	return views.Oracle(oracle), nil
 }
 
+// ListOracles godoc
+// @Summary list all oracles
+// @Description
+// @Tags Oracles
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} api.Resp_ListOracles
+// @Router /oracles [get]
 func (s *Server) ListOracles(ctx context.Context, _ *api.Req_ListOracles) (*api.Resp_ListOracles, error) {
 	oracles, err := s.oracles.List(ctx)
 	if err != nil {
@@ -133,6 +177,15 @@ func (s *Server) ListOracles(ctx context.Context, _ *api.Req_ListOracles) (*api.
 	return resp, nil
 }
 
+// FindCollateral godoc
+// @Summary find collateral by id
+// @Description
+// @Tags Collaterals
+// @Accept  json
+// @Produce  json
+// @param id path string true "collateral id"
+// @Success 200 {object} api.Collateral
+// @Router /cats/{id} [get]
 func (s *Server) FindCollateral(ctx context.Context, req *api.Req_FindCollateral) (*api.Collateral, error) {
 	cat, err := s.collaterals.Find(ctx, req.Id)
 	if err != nil {
@@ -147,6 +200,14 @@ func (s *Server) FindCollateral(ctx context.Context, req *api.Req_FindCollateral
 	return views.Collateral(cat), nil
 }
 
+// ListCollaterals godoc
+// @Summary list all collateral
+// @Description
+// @Tags Collaterals
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} api.Resp_ListCollaterals
+// @Router /cats [get]
 func (s *Server) ListCollaterals(ctx context.Context, _ *api.Req_ListCollaterals) (*api.Resp_ListCollaterals, error) {
 	cats, err := s.collaterals.List(ctx)
 	if err != nil {
@@ -162,6 +223,15 @@ func (s *Server) ListCollaterals(ctx context.Context, _ *api.Req_ListCollaterals
 	return resp, nil
 }
 
+// FindVault godoc
+// @Summary find vault by id
+// @Description
+// @Tags Vaults
+// @Accept  json
+// @Produce  json
+// @param id path string true "vault id"
+// @Success 200 {object} api.Vault
+// @Router /vats/{id} [get]
 func (s *Server) FindVault(ctx context.Context, req *api.Req_FindVault) (*api.Vault, error) {
 	vat, err := s.vaults.Find(ctx, req.Id)
 	if err != nil {
@@ -176,6 +246,16 @@ func (s *Server) FindVault(ctx context.Context, req *api.Req_FindVault) (*api.Va
 	return views.Vault(vat), nil
 }
 
+// ListMyVaults godoc
+// @Summary list my vaults
+// @Description
+// @Tags Vaults
+// @Accept  json
+// @Produce  json
+// @param request query api.Req_ListMyVaults false "default limit 50"
+// @param Authorization header string true "Example: Bearer foo"
+// @Success 200 {object} api.Resp_ListVaults
+// @Router /me/vats [get]
 func (s *Server) ListMyVaults(ctx context.Context, req *api.Req_ListMyVaults) (*api.Resp_ListVaults, error) {
 	user, ok := request.UserFrom(ctx)
 	if !ok {
@@ -190,6 +270,15 @@ func (s *Server) ListMyVaults(ctx context.Context, req *api.Req_ListMyVaults) (*
 	})
 }
 
+// ListVaults godoc
+// @Summary list vaults
+// @Description
+// @Tags Vaults
+// @Accept  json
+// @Produce  json
+// @param request query api.Req_ListVaults false "default limit 50"
+// @Success 200 {object} api.Resp_ListVaults
+// @Router /vats [get]
 func (s *Server) ListVaults(ctx context.Context, req *api.Req_ListVaults) (*api.Resp_ListVaults, error) {
 	fromID := cast.ToInt64(req.Cursor)
 	limit := 50
@@ -230,6 +319,15 @@ func (s *Server) ListVaults(ctx context.Context, req *api.Req_ListVaults) (*api.
 	return resp, nil
 }
 
+// ListVaultEvents godoc
+// @Summary list vault events
+// @Description
+// @Tags Vaults
+// @Accept  json
+// @Produce  json
+// @param request query api.Req_ListVaultEvents false "default limit 50"
+// @Success 200 {object} api.Resp_ListVaultEvents
+// @Router /vats/{id}/events [get]
 func (s *Server) ListVaultEvents(ctx context.Context, req *api.Req_ListVaultEvents) (*api.Resp_ListVaultEvents, error) {
 	events, err := s.vaults.ListEvents(ctx, req.Id)
 	if err != nil {
@@ -245,6 +343,15 @@ func (s *Server) ListVaultEvents(ctx context.Context, req *api.Req_ListVaultEven
 	return resp, nil
 }
 
+// FindFlip godoc
+// @Summary find flip by id
+// @Description
+// @Tags Flips
+// @Accept  json
+// @Produce  json
+// @param id path string true "flip id"
+// @Success 200 {object} api.Flip
+// @Router /flips/{id} [get]
 func (s *Server) FindFlip(ctx context.Context, req *api.Req_FindFlip) (*api.Flip, error) {
 	flip, err := s.flips.Find(ctx, req.Id)
 	if err != nil {
@@ -263,6 +370,15 @@ func (s *Server) FindFlip(ctx context.Context, req *api.Req_FindFlip) (*api.Flip
 	return views.Flip(flip), nil
 }
 
+// ListFlips godoc
+// @Summary list flips
+// @Description
+// @Tags Flips
+// @Accept  json
+// @Produce  json
+// @param request query api.Req_ListFlips false "default limit 50"
+// @Success 200 {object} api.Resp_ListFlips
+// @Router /flips [get]
 func (s *Server) ListFlips(ctx context.Context, req *api.Req_ListFlips) (*api.Resp_ListFlips, error) {
 	fromID := cast.ToInt64(req.Cursor)
 	limit := 50
@@ -294,6 +410,15 @@ func (s *Server) ListFlips(ctx context.Context, req *api.Req_ListFlips) (*api.Re
 	return resp, nil
 }
 
+// ListFlipEvents godoc
+// @Summary list flip events
+// @Description
+// @Tags Flips
+// @Accept  json
+// @Produce  json
+// @param id path string true "flip id"
+// @Success 200 {object} api.Resp_ListFlipEvents
+// @Router /flips/{id}/events [get]
 func (s *Server) ListFlipEvents(ctx context.Context, req *api.Req_ListFlipEvents) (*api.Resp_ListFlipEvents, error) {
 	events, err := s.flips.ListEvents(ctx, req.Id)
 	if err != nil {
@@ -309,6 +434,16 @@ func (s *Server) ListFlipEvents(ctx context.Context, req *api.Req_ListFlipEvents
 	return resp, nil
 }
 
+// FindTransaction godoc
+// @Summary find tx by follow id
+// @Description
+// @Tags Transactions
+// @Accept  json
+// @Produce  json
+// @param Authorization header string true "Example: Bearer foo"
+// @param follow_id path string true "follow id"
+// @Success 200 {object} api.Transaction
+// @Router /transactions/{follow_id} [get]
 func (s *Server) FindTransaction(ctx context.Context, req *api.Req_FindTransaction) (*api.Transaction, error) {
 	user, ok := request.UserFrom(ctx)
 	if !ok {
@@ -328,6 +463,15 @@ func (s *Server) FindTransaction(ctx context.Context, req *api.Req_FindTransacti
 	return views.Transaction(tx), nil
 }
 
+// ListTransactions godoc
+// @Summary list transactions
+// @Description
+// @Tags Transactions
+// @Accept  json
+// @Produce  json
+// @param request query api.Req_ListTransactions false "default limit 50"
+// @Success 200 {object} api.Resp_ListTransactions
+// @Router /transactions [get]
 func (s *Server) ListTransactions(ctx context.Context, req *api.Req_ListTransactions) (*api.Resp_ListTransactions, error) {
 	fromID := cast.ToInt64(req.Cursor)
 	limit := 50
